ref: Change function calling logic
