# docs/swagger.yaml
@@ -7,9 +7,9 @@ definitions:
     - RANDOM
     type: string
     x-enum-varnames:
-    - InOrder
-    - Replay
-    - Random
+    - PlaybackInOrder
+    - PlaybackReplay
+    - PlaybackRandom
   response.Error:
     properties:
       message:
@@ -29,7 +29,7 @@ definitions:
     type: object
   room_handler.createResponse:
     properties:
-      id:
+      ID:
         description: ID of the created room
         type: integer
       name:
@@ -42,12 +42,6 @@ definitions:
         allOf:
         - $ref: '#/definitions/model.PlaybackOrderType'
         description: Playback order in the created room
-    type: object
-  room_handler.generateShareCodeResponse:
-    properties:
-      shareCode:
-        description: Code to connect to the room
-        type: string
     type: object
 host: localhost:8024
 info:
@@ -89,7 +83,7 @@ paths:
           schema:
             $ref: '#/definitions/room_handler.createResponse'
         "400":
-          description: Invalid input data
+          description: Failed to encode request; Validation failed for request
           schema:
             $ref: '#/definitions/response.Error'
         "403":
@@ -128,6 +122,10 @@ paths:
       responses:
         "200":
           description: OK
+        "400":
+          description: Invalid roomID parameter
+          schema:
+            $ref: '#/definitions/response.Error'
         "403":
           description: Trying to delete someone else's room; Invalid X-Account-ID
             header format
@@ -144,7 +142,49 @@ paths:
       summary: Deletes a room
       tags:
       - Rooms
-  /rooms/{roomID}/share:
+  /rooms/{roomID}/share-code:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - default: en-US
+        description: Language preference
+        in: header
+        name: Produce-Language
+        type: string
+      - description: Account ID
+        in: header
+        name: X-Account-ID
+        required: true
+        type: integer
+      - description: Room ID
+        in: path
+        name: roomID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "400":
+          description: Invalid roomID parameter
+          schema:
+            $ref: '#/definitions/response.Error'
+        "403":
+          description: Trying to delete a code for someone else's room; Invalid X-Account-ID
+            header format
+          schema:
+            $ref: '#/definitions/response.Error'
+        "404":
+          description: The room does not exist
+          schema:
+            $ref: '#/definitions/response.Error'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.Error'
+      summary: Deletes share code
+      tags:
+      - ShareCode
     get:
       consumes:
       - application/json
@@ -167,95 +207,12 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "400":
+          description: Invalid roomID parameter
           schema:
-            $ref: '#/definitions/room_handler.generateShareCodeResponse'
+            $ref: '#/definitions/response.Error'
         "403":
-          description: Trying to generate a code for someone else's room; Invalid
-            X-Account-ID header format
-          schema:
-            $ref: '#/definitions/response.Error'
-        "404":
-          description: The room does not exist
-          schema:
-            $ref: '#/definitions/response.Error'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/response.Error'
-      summary: Receives a code to connect to the room
-      tags:
-      - ShareCode
-    patch:
-      consumes:
-      - application/json
-      parameters:
-      - default: en-US
-        description: Language preference
-        in: header
-        name: Produce-Language
-        type: string
-      - description: Account ID
-        in: header
-        name: X-Account-ID
-        required: true
-        type: integer
-      - description: Room ID
-        in: path
-        name: roomID
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/room_handler.generateShareCodeResponse'
-        "403":
-          description: Trying to generate a code for someone else's room; Invalid
-            X-Account-ID header format
-          schema:
-            $ref: '#/definitions/response.Error'
-        "404":
-          description: The room does not exist
-          schema:
-            $ref: '#/definitions/response.Error'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/response.Error'
-      summary: Creates or recreates a code to connect to a room
-      tags:
-      - ShareCode
-  /rooms/{roomID}/share-reset:
-    patch:
-      consumes:
-      - application/json
-      parameters:
-      - default: en-US
-        description: Language preference
-        in: header
-        name: Produce-Language
-        type: string
-      - description: Account ID
-        in: header
-        name: X-Account-ID
-        required: true
-        type: integer
-      - description: Room ID
-        in: path
-        name: roomID
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "403":
-          description: Trying to reset a code for someone else's room; Invalid X-Account-ID
+          description: Trying to get a code for someone else's room; Invalid X-Account-ID
             header format
           schema:
             $ref: '#/definitions/response.Error'
@@ -267,7 +224,49 @@ paths:
           description: Internal server error
           schema:
             $ref: '#/definitions/response.Error'
-      summary: Reset a code to connect to a room
+      summary: Gets share code
+      tags:
+      - ShareCode
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - default: en-US
+        description: Language preference
+        in: header
+        name: Produce-Language
+        type: string
+      - description: Account ID
+        in: header
+        name: X-Account-ID
+        required: true
+        type: integer
+      - description: Room ID
+        in: path
+        name: roomID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "400":
+          description: Invalid roomID parameter
+          schema:
+            $ref: '#/definitions/response.Error'
+        "403":
+          description: Trying to generate a code for someone else's room; Invalid
+            X-Account-ID header format
+          schema:
+            $ref: '#/definitions/response.Error'
+        "404":
+          description: The room does not exist
+          schema:
+            $ref: '#/definitions/response.Error'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.Error'
+      summary: Creates and sets or replaces share code
       tags:
       - ShareCode
 swagger: "2.0"
