# internal/handlers/share_code_handler/delete.go
@@ -1,4 +1,4 @@
-package room_handler
+package share_code_handler
 
 import (
 	"github.com/gin-gonic/gin"
@@ -11,27 +11,29 @@ import (
 	"strconv"
 )
 
-// generateShareCodeResponse is the data format returned when generating the share code
-type generateShareCodeResponse struct {
+// deleteResponse is the data format returned when deleting the share code
+type deleteResponse struct {
+	// Room ID for code
+	RoomID int `json:"roomID"`
 	// Code to connect to the room
-	ShareCode *string `json:"shareCode"`
+	Code string `json:"code"`
 }
 
-// GenerateShareCode creates or recreates a code to connect to a room
-// @Summary Creates or recreates a code to connect to a room
+// Delete deletes share code
+// @Summary Deletes share code
 // @Tags ShareCode
 // @Accept 	json
 // @Produce json
-// @Param Produce-Language 	header 	string 	false 	"Language preference" default(en-US)
-// @Param X-Account-ID 		header 	int 	true 	"Account ID"
-// @Param roomID 			path 	int 	true 	"Room ID"
-// @Success 200 {object} generateShareCodeResponse
-// @Failure 403 {object} response.Error "Trying to generate a code for someone else's room; Invalid X-Account-ID header format"
+// @Param Produce-Language	header	string	false	"Language preference" default(en-US)
+// @Param X-Account-ID		header	int		true	"Account ID"
+// @Param roomID			path	int		true	"Room ID"
+// @Failure 400 {object} response.Error "Invalid roomID parameter"
+// @Failure 403 {object} response.Error "Trying to delete a code for someone else's room; Invalid X-Account-ID header format"
 // @Failure 404 {object} response.Error "The room does not exist"
 // @Failure 500 {object} response.Error "Internal server error"
-// @Router /rooms/{roomID}/share [patch]
-func (h *Handler) GenerateShareCode(c *gin.Context) {
-	log.Debug().Msg("Generating share code")
+// @Router /rooms/{roomID}/share-code [delete]
+func (h *Handler) Delete(c *gin.Context) {
+	log.Debug().Msg("Deleting share code")
 
 	lang := c.MustGet("lang").(string)
 	localizer := i18n.NewLocalizer(h.Bundle, lang)
@@ -61,20 +63,15 @@ func (h *Handler) GenerateShareCode(c *gin.Context) {
 	}
 	log.Debug().Int("roomID", roomID).Msg("Url parameter read successfully")
 
-	var shareCode *string
 	err = h.TransactionManager.WithTransaction(func(tx *sqlx.Tx) (err error) {
-		err = h.RoomService.GenerateShareCode(tx, roomID, accountID)
-		if err != nil {
-			return err
-		}
-		shareCode, err = h.RoomService.GetShareCode(tx, roomID, accountID)
+		err = h.ShareCodeService.Delete(tx, roomID, accountID)
 		if err != nil {
 			return err
 		}
 		return nil
 	})
 	if err != nil {
-		log.Error().Err(err).Int("roomID", roomID).Msg("Failed to generate share code")
+		log.Error().Err(err).Int("roomID", roomID).Msg("Failed to delete share code")
 		if _, ok := err.(errors.Forbidden); ok {
 			c.JSON(http.StatusForbidden, response.Error{
 				Message: localizer.MustLocalize(&i18n.LocalizeConfig{
@@ -85,14 +82,14 @@ func (h *Handler) GenerateShareCode(c *gin.Context) {
 		} else if _, ok := err.(errors.NotFound); ok {
 			c.JSON(http.StatusNotFound, response.Error{
 				Message: localizer.MustLocalize(&i18n.LocalizeConfig{
-					MessageID: "RoomNotFound"}),
+					MessageID: "NotFound"}),
 				Reason: err.Error(),
 			})
 			return
 		} else {
 			c.JSON(http.StatusInternalServerError, response.Error{
 				Message: localizer.MustLocalize(&i18n.LocalizeConfig{
-					MessageID: "FailedToGenerateShareCode"}),
+					MessageID: "FailedToDeleteShareCode"}),
 				Reason: err.Error(),
 			})
 			return
@@ -100,7 +97,5 @@ func (h *Handler) GenerateShareCode(c *gin.Context) {
 	}
 
 	log.Debug().Msg("Share code generated")
-	c.JSON(http.StatusOK, generateShareCodeResponse{
-		ShareCode: shareCode,
-	})
+	c.Status(http.StatusOK)
 }
